fix github action file

--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -20,8 +20,8 @@ jobs:
       - run cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
       - run mv cppcheck.xml ./public
       
-    name: archive dist
-        uses: actions/upload-artifact@v1
+    - name: archive dist
+      - uses: actions/upload-artifact@v1
         with:
           name: public
           path: public
