--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -9,15 +9,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run apt-get update && apt-get install  -y build-essential cppcheck curl \ 
+      - run: apt-get update && apt-get install  -y build-essential cppcheck curl \ 
         python \ 
         python-pygments \ 
         && apt-get clean \ 
         && rm -rf /var/lib/apt/lists/*
+      - run: mkdir /cfg
 
-      - run cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
-      - run cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
-      - run mv cppcheck.xml ./public
+      - run: cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
+      - run: cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
+      - run: mv cppcheck.xml ./public
       
       - name: archive dist
         uses: actions/upload-artifact@v1
