--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -9,10 +9,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: apt-get update && apt-get install  -y build-essential cppcheck curl \ 
-        python \ 
-        python-pygments \ 
-        && apt-get clean \ 
+      - run: |-
+        apt-get update && apt-get install -y
+        build-essential
+        cppcheck curl
+        python
+        python-pygments
+        && apt-get clean
         && rm -rf /var/lib/apt/lists/*
       - run: mkdir /cfg
 
