--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -9,15 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: >-
+      - run: |
         apt-get update
-        && apt-get install -y
-        build-essential
-        cppcheck curl
-        python
-        python-pygments
-        && apt-get clean
-        && rm -rf /var/lib/apt/lists/*
+        apt-get install -y build-essential cppcheck curl python python-pygments
+        apt-get clean
+        rm -rf /var/lib/apt/lists/*
 
       - run: mkdir /cfg
 
