--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -9,11 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: |
-        apt-get update
-        apt-get install -y build-essential cppcheck curl python python-pygments
-        apt-get clean
-        rm -rf /var/lib/apt/lists/*
+      - run: apt-get update
+      - run: apt-get install -y build-essential cppcheck curl python python-pygments
+      - run: apt-get clean
+      - run: rm -rf /var/lib/apt/lists/*
 
       - run: mkdir /cfg
 
