--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -9,10 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: apt-get update
-      - run: apt-get install -y build-essential cppcheck curl python python-pygments
-      - run: apt-get clean
-      - run: rm -rf /var/lib/apt/lists/*
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y build-essential cppcheck curl python python-pygments
 
       - run: mkdir /cfg
 
