--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -14,10 +14,15 @@ jobs:
 
       - run: cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
       - run: cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
-      - run: mv cppcheck.xml ./public
-      
-      - name: archive dist
+
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
+
+      - name: archive cppcheck.xml
         uses: actions/upload-artifact@v1
         with:
-            name: public
-            path: public
+            name: cppcheck.xml
+            path: cppcheck.xml
