--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -7,13 +7,16 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y build-essential cppcheck curl python python-pygments
+      - name: setup
+        run: sudo apt-get update
+        run: sudo apt-get install -y build-essential cppcheck curl python python-pygments
 
-      - run: cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
-      - run: cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
+      - name: cppcheck
+        run: cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
+        run: cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -21,7 +24,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
 
-      - name: archive cppcheck.xml
+      - name: archive
         uses: actions/upload-artifact@v1
         with:
             name: cppcheck.xml
