add if condition

--- a/.github/workflows/cppcheck.yaml
+++ b/.github/workflows/cppcheck.yaml
@@ -7,26 +7,32 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-      - name: checkout
-        uses: actions/checkout@v2
+      - name: printenv
+        run: env
 
       - name: setup
+        id: setup
         run: |
               sudo apt-get update
               sudo apt-get install -y build-essential cppcheck curl python python-pygments
 
       - name: cppcheck
+        if: steps.setup.conclusion == 'success'
+        id: cppcheck
+        uses: actions/checkout@v2
         run: |
               cppcheck --xml --xml-version=2 "modules/core/src" 2> cppcheck.xml
               cppcheck-htmlreport --file=cppcheck.xml --title=cppcheck --report-dir=./public
 
       - name: deploy
+        if: steps.cppcheck.conclusion == 'success'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
 
       - name: archive
+        if: steps.cppcheck.conclusion == 'success'
         uses: actions/upload-artifact@v1
         with:
             name: cppcheck.xml
